fixed aligning issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -138,9 +138,9 @@
   
   .learn-math-today {
     display: flex;
-    background-color: #9F0000;
+    background-color: #970000;
     padding: 20px;
-    height: 300px;
+    height: 280px;
     border-radius: 8px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -158,6 +158,7 @@
   .learn-math-today h2 {
     font-size: 60px;
     font-weight: 700;
+    margin-top: 15px;
     margin-bottom: 10px;
     margin-left: 8px;
   }
@@ -177,6 +178,7 @@
     align-items: center;
     color: #666;
     margin-right: 25px;
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 30px;
   }
   
